package ex45;

public class WordReplacer {
        public static String replace(String origin, String oldWord, String newWord) {
            return origin.replace(oldWord,newWord);
        }
    }
