@startuml
'https://plantuml.com/class-diagram

class App {
    *Scanner

    *getString( String )
}

class Files {
    +getProjectDirectory()
    +getOutputFile()
    +getInputFile()
    +writeToFile()
}

class WordReplacer {
    +replace()
}

object File

App --> Files
Files o--> File
App --> WordReplacer
@enduml